--- a/spring-boot-02-config/src/main/resources/application.properties
+++ b/spring-boot-02-config/src/main/resources/application.properties
@@ -4,12 +4,12 @@
 # idea\u9ED8\u8BA4utf-8 \uFF0C \u9700\u8981\u6539\u4E3A\u8FD0\u884C\u65F6ASCII
 
 #\u914D\u7F6EPerson\u7684\u503C
-#person.last-name=gatesma@foxmail.com
-#person.age=18
-#person.birth=2020/1/1
-#person.boss=false
-#person.maps.k1=v1
-#person.maps.k2=v2
-#person.lists=a,b,c
-#person.dog.name=dog
-#person.dog.age=15
+person.last-name=gatesma@foxmail.com
+#person.age=${random.int}
+person.birth=2020/1/1
+person.boss=false
+person.maps.k1=v1
+person.maps.k2=v2
+person.lists=a,b,c
+person.dog.name=${person.last-name}_dog
+person.dog.age=15
